Bug fix - provider page stars misalignment fix

--- a/themes/gv_sky/css/sass/_parts/_elements.sass
+++ b/themes/gv_sky/css/sass/_parts/_elements.sass
@@ -447,7 +447,7 @@
 			+clearfix
 
 			+m(414)
-				margin-top: 0
+				margin-top: 2px
 
 
 
