--- a/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
+++ b/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
@@ -327,6 +327,8 @@
 					+fivestar(18px)
 
 					+m(480)
+						position: relative
+						top: -2px
 						float: left
 
 
